--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-top: -5em;
         height: 100vh;
       }
 
@@ -53,6 +52,7 @@
         align-items: center;
         flex-direction: column;
         width: 20%;
+        transform : scale(1.3);
         background-color: white;
         border-radius: 15px 15px 10px 10px;
         box-shadow: 0px 10px 10px hsl(224, 23%, 55%);
